syntax="proto3";
 
package proto;
 
option go_package="github.com/swarajp18/blogging-platform";
 
message BlogData {
   string PostID = 1;
   string Title = 2;
   string Content = 3;
   string PublicationDate = 4;
   repeated string Tags = 5;
}

message UpdateStatus {
   Status Status = 1;
   BlogData BlogData = 2;

}

service Blog {
	rpc GetBlog (ID) returns (BlogData);
   rpc GetBlogs (Empty) returns (stream BlogData);
	rpc CreateBlog (BlogData) returns (BlogData);
	rpc UpdateBlog (BlogData) returns (UpdateStatus);
	rpc DeleteBlog (ID) returns (Status);
}

message Empty {}

message ID {
	string value = 1;
}

message Status {
	int32 value = 1; 
}